--- a/styles.css
+++ b/styles.css
@@ -2,3 +2,17 @@
     width: 100%;
     height: 500px;
   }
+
+body {
+  padding-top: 65px;
+}
+.starter-template {
+  padding: 40px 15px;
+  text-align: center;
+}
+
+.logo-vedacit{
+  height: 40px;
+  padding-top: 13px;
+  padding-right: 20px;
+}
